--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -20,6 +20,10 @@ a.active hr{
   font-style: normal;
 }
 
+::-webkit-scrollbar{
+  display: none;
+}
+
 
 @media (max-width: 640px) {
   a.active{
@@ -27,3 +31,4 @@ a.active hr{
     color: white;
   }
 }
+
